# fla

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: test.yml
docs/: CHANGELOG.md  evaluation.md  pi06_comprehensive_training.md
examples/aloha_sim/: evaluate.py
fla/: .gitignore  README.md  pyproject.toml  setup.py
fla/configs/: aloha_insertion.yaml  aloha_transfer_cube.yaml  cross_embodiment.yaml  libero.yaml
fla/examples/: advanced_finetuning.py  finetune_aloha.py  quickstart.py  train_lora_demo.py
fla/fla/: __init__.py
fla/fla/data/: __init__.py  lerobot_loader.py  transforms.py
fla/fla/evaluation/: __init__.py  aloha.py  evaluator.py  metrics.py
fla/fla/models/: __init__.py  base.py  pi05.py
fla/fla/scripts/: __init__.py  evaluate.py  serve.py  train.py
fla/fla/serving/: __init__.py
fla/fla/shared/: __init__.py  array_typing.py  nnx_utils.py  normalize.py
fla/fla/training/: __init__.py  checkpoints.py  knowledge_insulation.py  lora.py  optimizer.py  reinflow.py  trainer.py
fla/tests/: __init__.py  test_data.py  test_evaluation.py  test_knowledge_insulation.py  test_lora.py  test_models.py  test_reinflow.py  test_training.py
scripts/: claude_monitor.sh  compute_ewc_state.py  create_finetune_config.py  download_datasets.py  evaluate_aloha_sim.py  post_training_eval.sh  run_eval_when_done.sh  run_full_evaluation.py  start_corrected_training.sh  train.py  train_and_eval.sh  train_pi06_corrected.sh
scripts/docker/: serve_policy.Dockerfile
src/fla/benchmarks/: aloha_sim.py  cli.py
src/openpi/: transforms.py
src/openpi/models/: pi0.py  pi0_config.py
src/openpi/training/: config.py  continual_learning.py  data_loader.py  weight_loaders.py
